--- a/index.ipynb
+++ b/index.ipynb
@@ -60,7 +60,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Your answer here"
+    "#Your answer here\n",
+    "\n",
+    "**0.5**"
    ]
   },
   {
@@ -73,11 +75,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your answer here"
+    "#Your answer here\n",
+    "\n",
+    "#Probability success 1st trial = 0.5\n",
+    "#Probability of no success on 1st and 2nd trial: (0.5)(0.5)= 0.25\n",
+    "#Since Probability_Success_Trial1 + Probability_No_success_Trial_1_and_2 + Probability_Success_Trial_2 = 1:\n",
+    "# 0.5 + 0.25 + Probability_Success_Trial_2 = 1\n",
+    "Probability_Success_Trial_2 = 0.25"
    ]
   },
   {
@@ -89,11 +97,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your answer here"
+    "#Your answer here\n",
+    "\n",
+    "\n",
+    "#Better thought of as probabilities of all failures up to that point times probability of success on that particular trial.\n",
+    "#3rd_trial = (0.5)**3 = .125\n",
+    "#5th_trail = (.5)**5"
    ]
   },
   {
@@ -106,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +127,11 @@
     "    \"\"\"y is a discrete random variable. It should be an integer that is greater then zero.\n",
     "    p is the probability of a success for the Bernoulli experiment to be conducted.\n",
     "    This function should return the probability that the first successful Bernoulli experiment will occur on the yth trial.\"\"\"\n",
-    "    prob = #The probability that the first successful bernoulli experiment occurs on the yth trial.\n",
+    "    #This outline could further help students.\n",
+    "    probability_failures_all_previous = (1-p)**(y-1)\n",
+    "    probability_success_this_trial = p\n",
+    "    overall_prob = probability_failures_all_previous * probability_success_this_trial\n",
+    "    prob = overall_prob#The probability that the first successful bernoulli experiment occurs on the yth trial.\n",
     "    return prob"
    ]
   },
@@ -128,12 +145,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.8554687500000146e-12\n"
+     ]
+    }
+   ],
    "source": [
     "#Code and answer here\n",
-    "prob = "
+    "prob = geometric_dist(10, .95)\n",
+    "print(prob)"
    ]
   },
   {
@@ -146,12 +172,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.35848592240854255\n"
+     ]
+    }
+   ],
    "source": [
     "#Code and answer here\n",
-    "prob = "
+    "#Forced use of geometric function: cumulative complements to success happening on any of first 20 iterations.\n",
+    "prob_no_failures = 1\n",
+    "for i in range(1,21):\n",
+    "    prob_first_failure_now = geometric_dist(i, .05)\n",
+    "    prob_no_failures -= prob_first_failure_now\n",
+    "print(prob_no_failures)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.3584859224085419"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#This is easier to solve simply with binomial distrubution. Important for students to see that.\n",
+    ".95**20"
    ]
   },
   {
@@ -165,12 +225,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0017010000000000011\n"
+     ]
+    }
+   ],
    "source": [
     "#Code and answer here\n",
-    "prob = "
+    "prob = geometric_dist(6, .7)\n",
+    "print(prob)"
    ]
   },
   {
@@ -183,12 +252,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.16806999999999994\n"
+     ]
+    }
+   ],
    "source": [
     "#Code and answer here\n",
-    "prob = "
+    "#Essentially same problem as 4 but new context and worded differently.\n",
+    "#Asking for probability that first 5 all prefer to buy groceries online\n",
+    "prob = .7**5\n",
+    "print(prob)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.16807000000000005\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Another, more roundabout solution:\n",
+    "prob_no_online_groceries = 1\n",
+    "for i in range(1,6):\n",
+    "    prob_first_online_grocery_now = geometric_dist(i, .3)\n",
+    "    prob_no_online_groceries -= prob_first_online_grocery_now\n",
+    "print(prob_no_online_groceries)"
    ]
   },
   {
@@ -217,7 +321,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
